--- a/meishi/project.config.json
+++ b/meishi/project.config.json
@@ -50,7 +50,7 @@
     "compileType": "miniprogram",
     "libVersion": "2.14.4",
     "appid": "wx3f39562e9b95718e",
-    "projectname": "美食分享",
+    "projectname": "美食推荐",
     "simulatorType": "wechat",
     "simulatorPluginLibVersion": {},
     "condition": {
